[gd_scene load_steps=13 format=3 uid="uid://bjmb0o4puhqwi"]

[ext_resource type="Texture2D" uid="uid://dkv5efaqwiw80" path="res://addons/Sprite Pack 2/11 - Skeleton/Limping_Movement (32 x 32).png" id="1_jxyyk"]
[ext_resource type="Script" path="res://scripts/skeleton.gd" id="1_r4cwj"]
[ext_resource type="Texture2D" uid="uid://cg0nvxly4uef8" path="res://addons/Sprite Pack 2/11 - Skeleton/Bone_Toss (32 x 32).png" id="2_blhse"]
[ext_resource type="Texture2D" uid="uid://0ocey5ycicpy" path="res://addons/Sprite Pack 2/11 - Skeleton/Hurt (32 x 32).png" id="3_b825j"]
[ext_resource type="PackedScene" uid="uid://n4wcpx7avysp" path="res://misc/hitbox.tscn" id="4_4hyhi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_orrnu"]
size = Vector2(21, 18)

[sub_resource type="Animation" id="Animation_2i6jo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_jxyyk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xll8n"]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_b825j")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_dem2m"]
resource_name = "shooting"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_blhse")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_bone"
}]
}

[sub_resource type="Animation" id="Animation_iueqb"]
resource_name = "walking"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_jxyyk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_88nbh"]
_data = {
"RESET": SubResource("Animation_2i6jo"),
"hurt": SubResource("Animation_xll8n"),
"shooting": SubResource("Animation_dem2m"),
"walking": SubResource("Animation_iueqb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7p6hp"]
size = Vector2(11, 6)

[node name="Skeleton" type="CharacterBody2D"]
position = Vector2(0, -16)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_r4cwj")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_jxyyk")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 7)
shape = SubResource("RectangleShape2D_orrnu")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_88nbh")
}
autoplay = "walking"

[node name="BoneSpawnPoint" type="Marker2D" parent="."]
position = Vector2(14, 2)

[node name="GroundDetector" type="RayCast2D" parent="."]
position = Vector2(0, 14)
target_position = Vector2(0, 8)
collision_mask = 2
hit_from_inside = true

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(50, 0)
hit_from_inside = true

[node name="Hitbox" parent="." instance=ExtResource("4_4hyhi")]
position = Vector2(0, -14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(2.5, 7)
shape = SubResource("RectangleShape2D_7p6hp")
debug_color = Color(0.8, 0.196078, 0.905882, 0.419608)

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
